<resources>
    <string name="app_name">     맛뷰 ver0.5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_Name">이름</string>
    <string name="user_Email">android.studio@android.com</string>
    <string name="user_image">유저 프로필사진</string>
    <string name="action_settings">Settings</string>

    <string name="main_name">Main</string>
    <string name="title_home_nav">Home</string>
    <string name="title_allsearch_nav">전체리뷰</string>
    <string name="title_write_nav">글쓰기</string>
    <string name="title_mypage_nav">마이페이지</string>

    <string name="title_profile">Profile</string>

    <string name="prompt_loginId">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="error_invalid_id">유효하지 않은 아이디입니다.</string>
    <string name="error_invalid_password">비밀번호가 짧습니다.</string>
    <string name="error_incorrect_password">비밀번호가 잘못되었습니다.</string>
    <string name="error_field_required">필수 입력사항입니다</string>
    <string name="permission_rationale">"이메일을 제공하려면 연락처 권한이 필요합니다 완료."</string>
    <string name="id_input">아이디 입력</string>
    <string name="password_input">비밀번호 입력</string>
    <string name="password_check_input">비밀번호 확인</string>
    <string name="name_input">이름 입력</string>
    <string name="age_input">나이 입력</string>
    <string name="email_input">이메일 입력</string>

    <string name="password2_input">2차 비밀번호</string>

    <string name="welcomeMsg">환영합니다.</string>
    <string name="welcomeEmail">회원 이메일</string>
    <string name="welcomeMain">메인으로 가기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 페이스북 -->
    <string name="facebook_app_id">226881738046500</string>
    <string name="fb_login_protocol_scheme">fb226881738046500</string>
    <string name="title_activity_maps2">Map</string>

    <string name="notice1">ver0.4 공지사항</string>
    <string name="notice2">\n\n
                            화요일할것 \n
                            회원정보,글수정기능 \n\n
                           배너아이템넣기\n
                           하이드구현하기\n\n
                           UI 디자인 필요 사용자가 이용하기 편하게\n\n
                           안정화 ( 노에러 구현 )\n
                                          동희   - \n\n
                   </string>

    <!--스피너 값-->


    <string name="season">카테고리</string>

    <string name="category_prompt">카테고리 선택</string>
    <string-array name="category_array">
        <item>메뉴를 선택해주세요</item>
        <item>한식</item>
        <item>중식</item>
        <item>피자/양식</item>
        <item>일식</item>
        <item>치킨</item>
        <item>분식</item>
        <item>패스트푸드</item>
        <item>족발/보쌈</item>

    </string-array>
    <string name="title_activity_maps_test">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_activity_test_post">TestPostActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_scrolling_1">맛뷰와 백종원이 만나다</string>
    <string name="title_activity_scrolling_2">태슐랭</string>
    <string name="title_activity_scrolling_5">10대의 취향저격</string>
    <string name="title_activity_scrolling_6">남성의 취향저격</string>

















    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


</resources>
